Fix: Corrigir IDs duplicados e problemas com jogadores undefined

--- a/OneDrive/Documentos/PROJETOS/efootball-site/index.html
+++ b/OneDrive/Documentos/PROJETOS/efootball-site/index.html
@@ -328,7 +328,7 @@
             </button>
           </div>
           <div class="filters-bar">
-            <select id="club-filter">
+            <select id="coaches-club-filter">
               <option value="">Todos os clubes</option>
             </select>
             <div class="search-bar">
